feat: add hardcode data event and team for test flow 3